Agregado elemento footer con Copyright

--- a/milestone1/views/layout.jade
+++ b/milestone1/views/layout.jade
@@ -5,3 +5,4 @@ html
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
 	body!= body
+	footer &copy; 2011 - Mart&iacute;n Ciparelli/Ignacio R&iacute;os Vazquez
