Agregado módulo jquery para node.js. Actualizado el servicio syntacticSearchService con cambios varios

--- a/milestone1/views/index.jade
+++ b/milestone1/views/index.jade
@@ -12,4 +12,4 @@ div#container
 script(src='/js/jquery-1.6.1.js')
 script(src='/js/syntacticSearch.js')
 script
-	$('#syntacticSearch').syntacticSearch();
+	$('.syntacticSearch').syntacticSearch();
