UI actualizada, milestone1 en fase de pruebas

--- a/milestone1/views/index.jade
+++ b/milestone1/views/index.jade
@@ -7,7 +7,7 @@ div#container
 			input.word( type='text' )
 			input.search( type='button', value='Buscar' )
 	
-		span.definition
+		ul.definitions
 
 script(src='/js/jquery-1.6.1.js')
 script(src='/js/syntacticSearch.js')
