Cambios en la UI, agregadas listas de palabras. Filtro en syntacticSearchService para no duplicar definiciones, ver issue7. Se reconocen las conjunciones, ver issue 5

--- a/milestone1/views/index.jade
+++ b/milestone1/views/index.jade
@@ -8,6 +8,33 @@ div#container
 			input.search( type='button', value='Buscar' )
 	
 		ul.definitions
+	
+	section#listas
+		h2 Palabras clasificadas:
+		div#sustantivos.lista
+			h3 Sustantivos:
+			ul
+		div#verbos.lista
+			h3 Verbos:
+			ul
+		div#adjetivos.lista
+			h3 Adjetivos:
+			ul
+		div#articulos.lista
+			h3 Artículos
+			ul
+		div#adverbios.lista
+			h3 Adverbios
+			ul
+		div#preposiciones.lista
+			h3 Preposiciones
+			ul
+		div#conjunciones.lista
+			h3 Conjunciones
+			ul
+		div#indeterminadas.lista
+			h3 Palabras no encontradas:
+			ul
 
 script(src='/js/jquery-1.6.1.js')
 script(src='/js/syntacticSearch.js')
