Normalizado el formato de títulos de las listas

--- a/milestone1/views/index.jade
+++ b/milestone1/views/index.jade
@@ -21,16 +21,16 @@ div#container
 			h3 Adjetivos:
 			ul
 		div#articulos.lista
-			h3 Artículos
+			h3 Artículos:
 			ul
 		div#adverbios.lista
-			h3 Adverbios
+			h3 Adverbios:
 			ul
 		div#preposiciones.lista
-			h3 Preposiciones
+			h3 Preposiciones:
 			ul
 		div#conjunciones.lista
-			h3 Conjunciones
+			h3 Conjunciones:
 			ul
 		div#indeterminadas.lista
 			h3 Palabras no encontradas:
