Agregada la función sintáctica 'pronombre' y corregida la clasificación de los artículos (inconsistencias de acentuación)

--- a/milestone1/views/index.jade
+++ b/milestone1/views/index.jade
@@ -31,6 +31,9 @@ div#container
 		div#conjunciones.lista
 			h3 Conjunciones:
 			ul
+		div#pronombres.lista
+			h3 Pronombres:
+			ul
 		div#indeterminadas.lista
 			h3 Palabras no encontradas:
 			ul
