--- a/milestone1/views/index.jade
+++ b/milestone1/views/index.jade
@@ -2,6 +2,8 @@ div#container
 	h1= title
 	p Cargue un archivo de texto:
 	input(type='file')
+	section
+		p#file_text
 	p o ingrese una palabra:
 	section.syntacticSearch
 		form
