--- a/milestone2/views/layout.jade
+++ b/milestone2/views/layout.jade
@@ -3,6 +3,7 @@ html
 	head
 		meta(charset='utf-8')
 		title= title
+		link(rel='stylesheet', href='/stylesheets/reset.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 	body!= body
 	footer &copy; 2011 - Martín Ciparelli / Ignacio Ríos Vazquez
