--- a/milestone2/views/index.jade
+++ b/milestone2/views/index.jade
@@ -1,11 +1,11 @@
 div#container
 	h1= title
 		span.arrow
-	p Cargue un archivo de texto:
+	h2 Cargue un archivo de texto:
 	input(type='file')
 	section
 		p#file_text
-	p o ingrese una palabra:
+	h2 o ingrese una palabra:
 	section.syntacticSearch
 		form
 			input.word( type='text' )
