--- a/milestone2/public/stylesheets/style.css
+++ b/milestone2/public/stylesheets/style.css
@@ -38,15 +38,14 @@ span:hover .tooltip{
 /*IRV - Definición de estilos - 14/08/2011 */
 body, footer {
 	background: url("../images/bg.jpg");
-	padding: 20px;
 }
 
-#container{
-	background: #666;  
+#container {
+	background: url("../images/bg_container.jpg") repeat-x;
 	margin: auto;  
 	width: 960px;  
 	height: 700px;  
-	padding-top: 30px; 
+	padding: 30px;
 }
 
 h1 {
@@ -55,9 +54,9 @@ h1 {
 	background: -moz-linear-gradient(top, #e3e3e3, #c8c8c8);
 	background: -webkit-gradient(linear, left top, left bottom, from(#e3e3e3), to(#c8c8c8));
 	padding: 10px 20px;
-	margin-left: -20px;
-	margin-top: 0;
+	margin: 0 0 20px -20px;
 	position: relative;
+	left: -30px;
 	width: 90%;
 
 	-moz-box-shadow: 1px 1px 3px #292929;
@@ -77,6 +76,23 @@ h1 {
 	top: 101%;  
 	left: 0;  
 	position: absolute;  
-}  
+}
 
+h2 {
+	font-size: 1.25em;
+	font-weight: 500;
+	color: #666666;
+	text-shadow: 0 1px 0 #ffffff;
+}
 
+#listas{
+	margin: 30px 0 0 0;
+}
+
+.lista {
+	border-top: 1px solid #dddddd;
+	border-bottom: 1px solid #aaaaaa;
+	margin: 0px 20px;
+	padding: 10px 5px;
+	width: 200px;
+}
