--- a/milestone2/views/layout.jade
+++ b/milestone2/views/layout.jade
@@ -6,4 +6,5 @@ html
 		link(rel='stylesheet', href='/stylesheets/reset.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 	body!= body
-	footer &copy; 2011 - Martín Ciparelli / Ignacio Ríos Vazquez
+	footer 
+		p.copyright &copy; 2011 - Martín Ciparelli / Ignacio Ríos Vazquez
