--- a/milestone2/views/index.jade
+++ b/milestone2/views/index.jade
@@ -41,5 +41,6 @@ div#container
 			h3 Palabras no encontradas:
 			ul
 script(src='/js/jquery-1.6.1.js')
+script(src='/js/css.js')
 script(src='/js/syntacticSearch.js')
 script(src='/js/scripts.js')
