--- a/milestone2/public/stylesheets/style.css
+++ b/milestone2/public/stylesheets/style.css
@@ -140,7 +140,7 @@ h3 {
 }
 
 .syntacticSearch .definition {
-	height: 30px;
+	min-height: 30px;
 	padding: 5px 0;	
 	line-height: 30px;
 	font-size: 1.2em;
