--- a/milestone2/views/layout.jade
+++ b/milestone2/views/layout.jade
@@ -3,8 +3,10 @@ html
 	head
 		meta(charset='utf-8')
 		title= title
-		link(rel='stylesheet', href='/stylesheets/reset.css')
-		link(rel='stylesheet', href='/stylesheets/style.css')
+		link( rel='stylesheet', href='/stylesheets/reset.css' )
+		link( rel='stylesheet', href='/stylesheets/smoothness/jquery-ui-1.8.16.custom.css')
+		link( rel='stylesheet/less', href='/stylesheets/style.less')
+		script(src='/js/less-1.1.5.min.js')
 	body!= body
 	footer 
 		p.copyright &copy; 2011 - Martín Ciparelli / Ignacio Ríos Vazquez
