Modificaciones css y html (Parcial, falta posicionar el footer)

--- a/milestone2/views/layout.jade
+++ b/milestone2/views/layout.jade
@@ -8,5 +8,5 @@ html
 		link( rel='stylesheet/less', href='/stylesheets/style.less')
 		script(src='/js/less-1.1.5.min.js')
 	body!= body
-	footer 
+	footer.clearfix
 		p.copyright &copy; 2011 - Martín Ciparelli / Ignacio Ríos Vazquez
