--- a/milestone2/public/stylesheets/style.less
+++ b/milestone2/public/stylesheets/style.less
@@ -50,6 +50,12 @@ span:hover .tooltip{
 }
 
 /*IRV - Definición de estilos - 14/08/2011 */
+
+//Less mixins
+.top_separator{
+	border-top: 1px solid #dddddd;
+}
+
 body {
 	height:700px;
 }
@@ -120,23 +126,11 @@ h3 {
 	text-shadow: 0 1px 0 #ffffff;
 }
 
-#listas{
-	margin: 30px 0 0 0;
-}
-
-.lista {
-	width: 400px;
-	margin: 0px 20px;
-	padding: 10px 5px;
-	border-top: 1px solid #dddddd;
-	border-bottom: 1px solid #aaaaaa;
-}
-
 section.txtArea{
 	height: 250px;
 	margin: 10px 0px;
 	padding: 5px 0px;
-	border-top: 1px solid #dddddd;
+	.top_separator;
 
 	textarea{
 		width: 940px;
@@ -156,7 +150,7 @@ section.txtArea{
 .syntacticSearch {
 	width: 100%;
 	height: 30px;
-	border-top: 1px solid #dddddd;
+	.top_separator;
 
 	form {
 		width: 310px;
@@ -189,37 +183,49 @@ section.txtArea{
 
 }
 
-.lista {
-	ul {
-		margin: 5px 30px;
-		color: #696969;
-		list-style-type: georgian;
+#listas{
+	height: 400px;
+	margin: 30px 0 0 0;
+	padding: 10px 0;
+	.top_separator;
+	
+	.lista {
+		width: 400px;
+		margin: 0px 20px;
+		padding: 10px 5px;
 
-		li {
-			width:300px;
-			margin: 5px 0px;
+		ul {
+			margin: 5px 30px;
+			color: #696969;
+			list-style-type: georgian;
 
-			select {
-				display: inline;
-				font-size: 0.9em;
-				margin: 0 2px 0 4px;
+			li {
+				width:300px;
+				margin: 5px 0px;
+
+				select {
+					display: inline;
+					font-size: 0.9em;
+					margin: 0 2px 0 4px;
+				}
+
+				input[type='number'] {
+					width: 20px;
+					display:inline;
+					font-size: 0.9em;
+					margin: 0 2px;
+				}
+
+				input[type='submit']{
+					display: inline;
+					margin: 0 2px;
+					font-size: 0.9em;
+				}
 			}
-
-			input[type='number'] {
-				width: 20px;
-				display:inline;
-				font-size: 0.9em;
-				margin: 0 2px;
-			}
-
-			input[type='submit']{
-				display: inline;
-				margin: 0 2px;
-				font-size: 0.9em;
-			}
+			//End li
 		}
-		//End li
+		//End ul
 	}
-	//End ul
+	//End .lista
 }
-//End .lista
+//End #listas
