desagregando en middlewares y modelo. Próximo paso ver de mostrar un listado de todas las palabras, poder ver las funciones asignadas a las palabras y el peso de cada una, y poder editar tanto las funciones asignadas como el peso de ellas.

--- a/milestone2/views/index.jade
+++ b/milestone2/views/index.jade
@@ -1,20 +1,19 @@
 div#container
-
 	h1= title
 		span.arrow
-
-	h2 Cargue un archivo de texto:
-	input(type='file')
 	section
 		p#file_text
 	
 	section.syntacticSearch.clearfix
-		h2 Ingrese una palabra:
-		form
-			input.word( type='text' )
-			input.search( type='button', value='Buscar' )
+		//
+			h2 Ingrese una palabra:
+			form
+				input.word( type='text' )
+				input.search( type='button', value='Buscar' )
 		ul.definitions
-	
+	section
+		h2 Cargue un archivo de texto:
+		input(type='file')
 	section.txtArea.clearfix
 		h2 O copie un texto:
 		textarea
