Ahora el query de un texto devuelve, para cada palabra, sus funciones y el peso asociado. En el cliente, se muestra el peso entre paréntesis en el title de cada palabra encontrada. Hay que estandarizar la forma de mostrar las palabras con el combo de funciones y el peso, para todos los lugares. Falta mostrar el peso en los listados de palabras encontradas y poder editarlo.

--- a/milestone2/views/list.jade
+++ b/milestone2/views/list.jade
@@ -1,10 +1,10 @@
-div#container
+div#container.indeterminadas
 	h1= title
 		span.arrow
 	ul.definitions
 		for word in words
 			li
-				span=word
+				span.word=word
 				label Función Sintáctica
 				select.chosen
 					option(value='') -- seleccione --
